Set fixed page width in html meta.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=960" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Stay informed about COVID-19" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
